--- a/package.json
+++ b/package.json
@@ -49,10 +49,15 @@
     "@nomiclabs/buidler": "^1.4.8",
     "@nomiclabs/buidler-truffle5": "^1.3.4",
     "@nomiclabs/buidler-web3": "^1.3.4",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/docs-utils": "^0.1.0",
     "@openzeppelin/gsn-helpers": "^0.2.3",
     "@openzeppelin/gsn-provider": "^0.1.10",
     "@openzeppelin/test-helpers": "^0.5.9",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "chai": "^4.2.0",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.1",
@@ -61,16 +66,27 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "ethereum-waffle": "^3.2.0",
     "ethereumjs-util": "^7.0.1",
+    "ethers": "^5.0.19",
     "ganache-cli": "^6.9.1",
+    "hardhat": "^2.0.3",
+    "hardhat-gas-reporter": "^1.0.1",
     "lodash.startcase": "^4.4.0",
     "lodash.zip": "^4.2.0",
     "micromatch": "^4.0.2",
-    "mocha": "^8.0.1",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "solhint": "^3.2.0",
     "solidity-coverage": "^0.7.11",
-    "solidity-docgen": "^0.5.3"
+    "solidity-docgen": "^0.5.8",
+    "web3": "^1.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@openzeppelin/contracts": "^3.2.0",
+    "@uniswap/lib": "^2.1.0",
+    "@uniswap/v2-core": "^1.0.1",
+    "buidler-source-descriptor": "0.0.15-rc"
+  }
 }
